ui/app/styles/registration.scss
@charset "UTF-8";

@import "vendor/normalize";

@import "bahmni-helper/variables";
@import "bahmni-helper/base";
@import "bahmni-helper/fonts";
@import "bahmni-helper/font-awesome";

@import "bahmni-components/uiHelper";
@import "bahmni-components/grid";
@import "bahmni-components/loader";
@import "bahmni-components/header";
@import "bahmni-components/navigation";
@import "bahmni-components/forms";
@import "bahmni-components/buttons";
@import "bahmni-components/typography";
@import "bahmni-components/loader";
@import "bahmni-components/splitButton";
@import "bahmni-components/table";
@import "bahmni-components/typography";

@import "bahmni-layout/layout";


@import "common/bahmniGlobal";
@import "common/notifications";
@import "common/directives";
@import "common/angularFix";
@import "common/noTouch";




//@import "clinical/observations";

@import "registration/registration";


//@import "common/noTouch";

